k8s/cm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm-deployment
  namespace: course-management-${ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cm-backend
  template:
    metadata:
      labels:
        component: cm-backend
    spec:
      containers:
        - name: course-management
          image: yaroslavyarmoshyk/course-management:${GIT_HASH}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
