k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: cm-ingress-node
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    component: cm-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment-dev
spec:
  ingressClassName: alb
  rules:
    - host: cm-yarmoshyk.io
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: cm-backend
                port:
                  number: 80
